# c-Modules-setup

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
mod/: vec2.cpp
src/: main.cpp
